NMS-19575: Review changes